--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tasks Creator</title>
+
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/light-dark.css" />
     <link rel="stylesheet" href="css/body-style.css" />
@@ -13,12 +13,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
       crossorigin="anonymous"
     />
+
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
+    <title>Tasks Creator</title>
   </head>
 
   <body>
-    <section class="body-style">
-    </section>
+    <section class="body-style"></section>
 
     <div class="header-content">
       <h1 id="header">Date and time</h1>
@@ -59,6 +62,7 @@
       </section>
     </main>
 
-    <script src="label.js"></script>
+    <script src="js/label.js"></script>
+    <script src="js/body.js"></script>
   </body>
 </html>
