Todo list with Local Storage

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+    <script defer src="js/body.js"></script>
+    <script defer src="js/label.js"></script>
+
     <title>Tasks Creator</title>
   </head>
 
@@ -61,8 +64,5 @@
         </div>
       </section>
     </main>
-
-    <script src="js/label.js"></script>
-    <script src="js/body.js"></script>
   </body>
 </html>
